syntax = "proto3";

package com.codecon.infrastructure.grpc.example;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;

message CreateExampleRequestDto {
  int64 exampleLong = 2;
  string exampleString = 3;
}

message UpdateExampleRequestDto {
  int64 id = 1;
  optional int64 exampleLong = 2;
  optional string exampleString = 3;
}

message ExampleResponseDto {
  int64 id = 1;
  int64 exampleLong = 2;
  string exampleString = 3;
}

message ExamplesResponseDto {
  repeated ExampleResponseDto examplesRequestDto = 1;
}

service ExampleService {
  rpc CreateExample(CreateExampleRequestDto) returns (ExampleResponseDto);
  rpc UpdateExample(UpdateExampleRequestDto) returns (ExampleResponseDto);
  rpc FindExamples(google.protobuf.Empty) returns (ExamplesResponseDto);
}
